--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,10 @@
 appdirs==1.4.4
-astroid==2.4.1
-attrs==19.3.0
-autopep8==1.5.2
-black==19.10b0
+black==20.8b1
 click==7.1.2
-colorama==0.4.3
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
+mypy-extensions==0.4.3
 pathspec==0.8.0
-pycodestyle==2.6.0
-pylint==2.5.2
-regex==2020.5.14
+regex==2020.10.11
 runstats==1.8.0
-six==1.14.0
 toml==0.10.1
 typed-ast==1.4.1
-wrapt==1.12.1
+typing-extensions==3.7.4.3
