--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /start_of_hand_position_results_tallies_shelf\.bak
 /start_of_hand_position_results_tallies_shelf\.dat
 /start_of_hand_position_results_tallies_shelf\.dir
+/start_of_hand_position_results_tallies_shelf_backups/
