--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "play-cribbage-hand",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Play a cribbage hand between two opponents.",
   "main": "playCribbageHand.js",
   "dependencies": {
@@ -10,6 +10,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "UNLICENSED"
+  "author": "Mark Fitzgerald <mark.a.fitzgerald1@gmail.com> (https://github.com/markafitzgerald1)",
+  "license": "MPL-2.0"
 }
