--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "http-server": "^0.12.3",
     "parcel-bundler": "^1.12.5",
+    "react-helmet": "^6.1.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
