--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.3",
     "http-server": "^0.12.3",
     "parcel-bundler": "^1.12.5",
     "react-helmet": "^6.1.0",
