Add vendor-recommended TypeScript configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
-// tsconfig.json
 {
+  "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "jsx": "react",
-    "esModuleInterop": true
+    "jsx": "react"
   }
 }
