--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-helmet": "^6.1.0",
     "http-server": "^0.12.3",
     "parcel-bundler": "^1.12.5",
     "react-helmet": "^6.1.0",
