--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "simulate-cribbage-games",
   "version": "0.0.2",
   "description": "Play a cribbage hand between two opponents.",
-  "main": "playCribbageHand.js",
+  "main": "index.html",
   "dependencies": {
+    "parcel": "^2.0.0-nightly.634",
     "random-js": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -14,17 +15,16 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
     "http-server": "^0.12.3",
-    "parcel-bundler": "^1.12.5",
     "react-helmet": "^6.1.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
-    "serve": "http-server dist/",
+    "start": "parcel serve src/index.html",
+    "build": "parcel build src/index.html",
+    "serve": "http-server",
     "tsc-build": "tsc --jsx react",
-    "clean": "rm -rf .cache/ dist/ index.js src/*.js src/components/*.js"
+    "clean": "rm -rf .cache/ dist/ index.js src/*.js src/components/*.js index.html index.*.js index.*.js.map"
   },
   "author": "Mark Fitzgerald <mark.a.fitzgerald1@gmail.com> (https://github.com/markafitzgerald1)",
   "license": "MPL-2.0"
