--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "simulate-cribbage-games",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Play a cribbage hand between two opponents.",
   "main": "index.html",
   "dependencies": {
     "parcel": "^2.0.0-nightly.634",
+    "postcss": "^8.2.9",
     "random-js": "^2.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typed-css-modules": "^0.6.6"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
@@ -20,11 +22,18 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "tcm-build": "tcm src/",
+    "tcm-watch": "tcm --watch src/",
+    "tcm-clean": "rm -f src/*.module.css.d.ts src/*/*.module.css.d.ts",
     "start": "parcel serve src/index.html",
+    "start-clean": "rm -f .parcel-cache/ dist/",
     "build": "parcel build src/index.html",
+    "build-clean": "rm -f index.html index.*.js index.*.js.map index.*.css index.*.css.map",
     "serve": "http-server",
     "tsc-build": "tsc --jsx react",
-    "clean": "rm -rf .cache/ dist/ index.js src/*.js src/components/*.js index.html index.*.js index.*.js.map"
+    "tsc-watch": "tsc --jsx react --watch",
+    "tsc-clean": "rm -f src/index.js src/cribbage/*.js src/components/*.js",
+    "clean": "rm -rf .parcel-cache/ dist/ index.html index.*.js index.*.js.map index.*.css index.*.css.map src/index.js src/cribbage/*.js src/components/*.js"
   },
   "author": "Mark Fitzgerald <mark.a.fitzgerald1@gmail.com> (https://github.com/markafitzgerald1)",
   "license": "MPL-2.0"
