--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tsc-build": "tsc --jsx react",
     "tsc-watch": "tsc --jsx react --watch",
     "tsc-clean": "rm -f src/*.js src/cribbage/*.js src/components/*.js",
-    "clean": "rm -rf .parcel-cache/ dist/ index.html index.*.js index.*.js.map index.*.css index.*.css.map src/*.js src/cribbage/*.js src/components/*.js",
+    "clean": "rm -rf src/*.module.css.d.ts src/*/*.module.css.d.ts .parcel-cache/ dist/ index.html index.*.js index.*.js.map index.*.css index.*.css.map src/*.js src/cribbage/*.js src/components/*.js",
     "simulate-1": "node src/playCribbageHand.js 1 1",
     "simulate": "node src/playCribbageHand.js"
   },
