--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "random-js": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typed-css-modules": "^0.6.6"
+    "typed-css-modules": "^0.6.6",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
@@ -18,6 +19,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
+    "@types/yargs": "^17.0.2",
     "http-server": "^0.12.3",
     "react-helmet": "^6.1.0",
     "typescript": "^4.2.3"
