--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/chai": "^4.2.21",
     "@types/md5": "^2.3.0",
+    "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
     "@types/yargs": "^17.0.2",
+    "chai": "^4.3.4",
     "http-server": "^0.12.3",
+    "mocha": "^9.0.3",
     "react-helmet": "^6.1.0",
+    "ts-node": "^10.1.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "tcm-build": "tcm src/",
     "tcm-watch": "tcm --watch src/",
     "tcm-clean": "rm -f src/*.module.css.d.ts src/*/*.module.css.d.ts",
