--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "tsc-watch": "tsc --jsx react --watch",
     "tsc-clean": "rm -f src/*.js src/cribbage/*.js src/components/*.js",
     "clean": "rm -rf src/*.module.css.d.ts src/*/*.module.css.d.ts .parcel-cache/ dist/ index.html index.*.js index.*.js.map index.*.css index.*.css.map src/*.js src/cribbage/*.js src/components/*.js",
-    "simulate": "node dist/src/simulateCribbageHands.js --hide-pone-hand --hide-dealer-hand --hide-play-actions"
+    "simulate": "node dist/src/simulateCribbageHands.js --hide-pone-hand --hide-dealer-hand --hide-play-actions",
+    "pmd-typescript": "pmd cpd --language ecmascript --minimum-tokens 22 --files $(find src test -type f -name *.ts)",
+    "pmd-python": "pmd cpd --language python --minimum-tokens 59 --files *.py",
+    "pmd": "npm run pmd-python && npm run pmd-typescript"
   },
   "author": "Mark Fitzgerald <mark.a.fitzgerald1@gmail.com> (https://github.com/markafitzgerald1)",
   "license": "MPL-2.0"
