--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 appdirs==1.4.4
+astroid==2.6.6
 black==20.8b1
 click==7.1.2
 Cython==0.29.21
 diskcache==5.1.0
+flake8==3.9.2
+isort==5.9.3
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
 mypy==0.790
 mypy-extensions==0.4.3
 pathspec==0.8.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+pylint==2.9.6
 regex==2020.10.11
 runstats==1.8.0
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+wrapt==1.12.1
