--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
     "http-server": "^0.12.3",
     "jest": "^27.0.6",
     "react-helmet": "^6.1.0",
