--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 appdirs==1.4.4
 astroid==2.6.6
-black==20.8b1
-click==7.1.2
-Cython==0.29.21
-diskcache==5.1.0
+black==21.7b0
+click==8.0.1
+Cython==0.29.24
+diskcache==5.2.1
 flake8==3.9.2
 isort==5.9.3
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
-mypy==0.790
+mypy==0.910
 mypy-extensions==0.4.3
-pathspec==0.8.0
+pathspec==0.9.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pylint==2.9.6
-regex==2020.10.11
-runstats==1.8.0
-toml==0.10.1
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
+regex==2021.8.3
+runstats==2.0.0
+toml==0.10.2
+tomli==1.2.1
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
 wrapt==1.12.1
