--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,22 @@
-appdirs==1.4.4
-astroid==2.6.6
-black==21.7b0
-click==8.0.1
-coverage==5.5
-Cython==0.29.24
-diskcache==5.2.1
-flake8==3.9.2
-isort==5.9.3
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-mypy==0.910
+astroid==2.12.5
+black==22.8.0
+click==8.1.3
+coverage==6.4.4
+dill==0.3.5.1
+diskcache==5.4.0
+flake8==5.0.4
+isort==5.10.1
+lazy-object-proxy==1.4.1
+mccabe==0.7.0
+mypy==0.971
 mypy-extensions==0.4.3
-pathspec==0.9.0
-pycodestyle==2.7.0
-pyflakes==2.3.1
-pylint==2.9.6
-regex==2021.8.3
+pathspec==0.10.1
+platformdirs==2.5.2
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pylint==2.15.0
 runstats==2.0.0
-toml==0.10.2
-tomli==1.2.1
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-wrapt==1.12.1
+tomli==2.0.1
+tomlkit==0.11.4
+typing_extensions==4.3.0
+wrapt==1.14.1
