--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-astroid==2.12.5
-black==22.8.0
+astroid==2.14.2
+black==23.1.0
 click==8.1.3
-coverage==6.4.4
-dill==0.3.5.1
+coverage==7.1.0
+dill==0.3.6
 diskcache==5.4.0
-flake8==5.0.4
-isort==5.10.1
-lazy-object-proxy==1.4.1
+flake8==6.0.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
 mccabe==0.7.0
-mypy==0.971
-mypy-extensions==0.4.3
-pathspec==0.10.1
-platformdirs==2.5.2
-pycodestyle==2.9.1
-pyflakes==2.5.0
-pylint==2.15.0
+mypy==1.0.0
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.0
+platformdirs==3.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pylint==2.16.2
 runstats==2.0.0
 tomli==2.0.1
-tomlkit==0.11.4
-typing_extensions==4.3.0
+tomlkit==0.11.6
+typing_extensions==4.5.0
 wrapt==1.14.1
