--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
-astroid==2.14.2
-black==23.1.0
-click==8.1.3
-coverage==7.1.0
-dill==0.3.6
-diskcache==5.4.0
-flake8==6.0.0
-isort==5.12.0
-lazy-object-proxy==1.9.0
-mccabe==0.7.0
-mypy==1.0.0
-mypy-extensions==1.0.0
-packaging==23.0
-pathspec==0.11.0
-platformdirs==3.0.0
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pylint==2.16.2
+appdirs==1.4.4
+astroid==2.6.6
+black==21.7b0
+click==8.0.1
+coverage==5.5
+Cython==0.29.24
+diskcache==5.2.1
+flake8==3.9.2
+isort==5.9.3
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+mypy==0.910
+mypy-extensions==0.4.3
+pathspec==0.9.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+pylint==2.9.6
+regex==2021.8.3
 runstats==2.0.0
-tomli==2.0.1
-tomlkit==0.11.6
-typing_extensions==4.5.0
-wrapt==1.14.1
+toml==0.10.2
+tomli==1.2.1
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
+wrapt==1.12.1
