--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 appdirs==1.4.4
-astroid==2.6.6
+astroid==2.14.2
 black==21.7b0
 click==8.0.1
 coverage==5.5
 Cython==0.29.24
+dill==0.3.6
 diskcache==5.2.1
 flake8==3.9.2
 isort==5.9.3
@@ -12,13 +13,15 @@ mccabe==0.6.1
 mypy==0.910
 mypy-extensions==0.4.3
 pathspec==0.9.0
+platformdirs==3.0.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
-pylint==2.9.6
+pylint==2.16.2
 regex==2021.8.3
 runstats==2.0.0
 toml==0.10.2
 tomli==1.2.1
+tomlkit==0.11.6
 typed-ast==1.4.3
-typing-extensions==3.10.0.0
+typing_extensions==4.5.0
 wrapt==1.12.1
