--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 appdirs==1.4.4
 astroid==2.14.2
-black==21.7b0
+black==23.1.0
 click==8.0.1
 coverage==5.5
 Cython==0.29.24
@@ -12,6 +12,7 @@ lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy==0.910
 mypy-extensions==0.4.3
+packaging==23.0
 pathspec==0.9.0
 platformdirs==3.0.0
 pycodestyle==2.7.0
