--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
 appdirs==1.4.4
 astroid==2.14.2
 black==23.1.0
+cfgv==3.3.1
 click==8.1.3
 coverage==5.5
 Cython==0.29.33
 dill==0.3.6
 diskcache==5.4.0
+distlib==0.3.6
+filelock==3.9.0
 flake8==6.0.0
+identify==2.5.18
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 mypy==0.920
 mypy-extensions==0.4.3
+nodeenv==1.7.0
 packaging==23.0
 pathspec==0.9.0
 platformdirs==3.0.0
+pre-commit==3.0.4
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.16.2
+PyYAML==6.0
 regex==2021.8.3
 runstats==2.0.0
 toml==0.10.2
@@ -25,4 +32,5 @@ tomli==1.2.1
 tomlkit==0.11.6
 typed-ast==1.4.3
 typing_extensions==4.5.0
+virtualenv==20.19.0
 wrapt==1.12.1
