Automate flake8 checks and fix some issues

--- a/.github/workflows/python-install-and-test.yml
+++ b/.github/workflows/python-install-and-test.yml
@@ -25,3 +25,6 @@ jobs:
       - name: Check for type errors
         run: |
           mypy simulate_cribbage_games.py
+      - name: Check for PEP8 style violations
+        run: |
+          flake8
