--- a/.pylintrc
+++ b/.pylintrc
@@ -3,3 +3,7 @@ disable=
     C0114, # missing-module-docstring
     C0115, # missing-class-docstring
     C0116, # missing-function-docstring
+    C0302, # too-many-lines
+    W0511, # fixme
+[FORMAT]
+max-line-length=185
