--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
 appdirs==1.4.4
-astroid==2.14.2
-black==23.1.0
-cfgv==3.3.1
-click==8.1.3
-coverage==5.5
-Cython==0.29.33
-dill==0.3.6
-diskcache==5.4.0
-distlib==0.3.6
-filelock==3.9.0
-flake8==6.0.0
-identify==2.5.18
-isort==5.12.0
-lazy-object-proxy==1.9.0
+astroid==3.3.5
+black==24.10.0
+cfgv==3.4.0
+click==8.1.7
+coverage==7.6.8
+Cython==3.0.11
+dill==0.3.9
+diskcache==5.6.3
+distlib==0.3.9
+filelock==3.16.1
+flake8==7.1.1
+identify==2.6.3
+isort==5.13.2
+lazy-object-proxy==1.10.0
 mccabe==0.7.0
-mypy==0.920
-mypy-extensions==0.4.3
-nodeenv==1.7.0
-packaging==23.0
-pathspec==0.9.0
-platformdirs==3.0.0
-pre-commit==3.0.4
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pylint==2.16.2
-PyYAML==6.0
-regex==2021.8.3
+mypy==1.13.0
+mypy-extensions==1.0.0
+nodeenv==1.9.1
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
+pre_commit==4.0.1
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pylint==3.3.1
+PyYAML==6.0.2
+regex==2024.11.6
 runstats==2.0.0
 toml==0.10.2
-tomli==1.2.1
-tomlkit==0.11.6
-typed-ast==1.4.3
-typing_extensions==4.5.0
-virtualenv==20.19.0
-wrapt==1.12.1
+tomli==2.1.0
+tomlkit==0.13.2
+typed-ast==1.5.5
+typing_extensions==4.12.2
+virtualenv==20.27.1
+wrapt==1.17.0
